  (require latest Dear ImGui version).
- TestEngine: Improved/standardized display of ImGuiTestRef in log.
  (e.g. computed ImGuiID more consistency printed).
- TestEngine: Fixed an issue using ctx->MenuXXX functions successively
  on the same menu. In some situation a second access would erroneously
  think the previous menu was still open.

2024/05/28:
- TestEngine: Fixes/support for 1.90.8 WIP changes.
- TestEngine: Fixed edge case calling ScrollTo() in non-Fast mode trying to
  access window scrollbar on the same frame where it disappears.

2024/05/24:
- TestEngine: ctx->WindowResize() knows how to work with child windows
  using resize borders only, and which don't have a resize corners.

2024/05/21:
- TestEngine: *BREAKING* obsoleted ctx->YieldUntil(int frame_count) which
  seems mostly unused, misleading, and can be replaced by 2 lines of code.
  Kept redirecting inline helper (will obsolete).

2024/05/17:
- TestEngine: Fixes calling ImGuiTestEngine_QueueTests() with NULL filter.

2024/05/16:
- TestEngine: Fixes/support for 1.90.7 swapping Ctrl<>Cmd on Mac OSX,
  and ImGuiMod_Shortcut being made obsolete/unnecessary.
- TestEngine: Added debugger detection support on Mac OSX (disable watchdog,
  enable asserts on failure or other options).

2024/05/14:
- TestEngine: IM_TEST_ENGINE_ASSERT() doesn't crash if called prior to test engine
  initialization.

2024/04/22:
- TestEngine: *EXCEPTIONALLY BREAKING CHANGE*
  Changed ItemInfo(), WindowInfo() and variants signatures to return
    a full ImGuiTestItemInfo struct instead of a pointer.
    Before:
      ImGuiTestItemInfo*  ItemInfo(ImGuiTestRef ref, ....);
      ImGuiTestItemInfo*  WindowInfo(ImGuiTestRef window_ref, ...);
    After:
      ImGuiTestItemInfo   ItemInfo(ImGuiTestRef ref, ....);
      ImGuiTestItemInfo   WindowInfo(ImGuiTestRef window_ref, ...);
  - The initial design suggested that the data could be updated on subsequent